--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,8 @@ body {
     margin: 15% auto;
     padding: 20px;
     border-radius: 8px;
-    width: 400px;
+    width: 90%;
+    max-width: 400px;
     position: relative;
     text-align: center;
     border: 1px solid #404040;
